Add local image paths to scripts.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Kaleidoscope</title>
 </head>
 <body>
+  <img src="./IMG/sample1.jpg" id="sample-1" style="display:none">
   <canvas id="canvas"></canvas>
   <script src="scripts.js"></script>
 </body>
