--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <canvas id="canvas"></canvas>
   <div class="kaleidoscope-toolbar">
     <input type="range" min="4" max="10" value="6" class="slider" id="mirror-slider">
+    <input type="range" min="1" max="100" value="50" class="slider" id="view-slider">
   </div>
   
   <script src="sketch/babelHelpers.js"></script>
