Add play button to trigger kaleidoscope animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <canvas id="canvas"></canvas>
   <div class="kaleidoscope-toolbar">
+    <button id="animate-button"> Play </button>
     <input type="range" min="4" max="10" value="6" class="slider" id="mirror-slider">
     <input type="range" min="1" max="100" value="50" class="slider" id="view-slider">
   </div>
