Move all js files into added js repo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script src='sketch/min/app.min.js?2020.0.2'></script>
   <script src='spectrum.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-  <script src='scripts.js'></script>
-  <script src='sketchToolbar.js'></script>
+  <script src='./js/scripts.js'></script>
+  <script src='./js/sketchToolbar.js'></script>
 </body>
 </html>
