Add second color picker, configure color pickers to controll stroke/fill, re-organize kaleidoscope rendering code

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </ul>
       </li>
 
-      <input type='text' id="color-picker"/>
+      <input type='text' id="fill-color-picker"/>
+      <input type='text' id="stroke-color-picker"/>
     </ul>
   </div>
 </div>
@@ -61,5 +62,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js"></script>
   <script src='./js/scripts.js'></script>
   <script src='./js/sketchToolbar.js'></script>
+  <script src='./js/kaleidoscopeToolbar.js'></script>
 </body>
 </html>
