--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div id='app-container'>
+    <!-- sketch canvas toolbar -->
     <div id='sketch-canvas-toolbar'>
       <div id='sketch-toolbar'> 
         <ul id='sketch-toolbar-menu'>
@@ -44,14 +45,17 @@
       </div>
     </div>
 
+    <!-- sketch canvas  -->
     <div id='sketch-canvas-container'>
       <sketch-container id='sketch-canvas'></sketch-container>
     </div>
 
+    <!-- kaleidoscope -->
     <div id='kaleidoscope-canvas-container'>
       <canvas id='canvas'></canvas>
     </div>
 
+    <!-- kaleidoscope toolbar -->
     <div>
       <div class='kaleidoscope-canvas-toolbar'>
         <button id='animate-button'> Play </button>
