Align slider bars correctly in kaleidoscope menu

--- a/index.html
+++ b/index.html
@@ -57,16 +57,12 @@
 
     <!-- kaleidoscope toolbar -->
     <div id='kaleidoscope-canvas-toolbar'>
-      <button id='animate-button'> Play </button> <br>
-      <div class='slider-wrapper'>
-        <input type='range' label = 'mirrors' min='4' max='10' value='6' class='slider' id='mirror-slider'> <br>
-      </div>
-
-      <div class='slider-wrapper'>
-        <input type='range' min='1' max='500' value='250' step='5' class='slider' id='view-slider'> <br>
-      </div>
-
-      <div class='slider-wrapper'>
+      <button id='animate-button'>►</button>
+      <div id='input-container'>
+        <input type='range' label = 'mirrors' min='4' max='10' value='6' class='slider' id='mirror-slider'> 
+        
+        <input type='range' min='1' max='500' value='250' step='5' class='slider' id='view-slider'> 
+        
         <input type='range' min='0' max='3' value='1' step='1/2' class='slider' id='speed-slider'>
       </div>
     </div>
