Partially configure webpack

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,8 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link href='sketch/min/sketch-api.min.css?2020.0.2' rel='stylesheet'>
-  <link href='sketch/min/app.min.css?2020.0.2' rel='stylesheet'>
-  <!-- <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.css'> -->
-  <link rel='stylesheet' href='./assets/spectrum.css'>
-  <link rel='stylesheet' href='./styles/styles.css'>
+  <link rel='stylesheet' href='./src/assets/spectrum.css'>
+  <link rel='stylesheet' href='./src/styles/styles.css'>
   <title>Kaleidoscope</title>
 </head>
 
@@ -96,14 +94,11 @@
     </div>
   </div>
 
-  <script src='./assets/jquery-3.5.1.js'></script>
   <script src='sketch/babelHelpers.js'></script>
   <script src='sketch/min/sketch-config.min.js?2020.0.2'></script>
   <script src='sketch/min/sketch-api.min.js?2020.0.2'></script>
   <script src='sketch/min/app.min.js?2020.0.2'></script>
+  <script>src='./js/spectrum.js' </script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js'></script>
-  <script src='./js/scripts.js'></script>
-  <script src='./js/sketchToolbar.js'></script>
-  <script src='./js/kaleidoscopeToolbar.js'></script>
 </body>
 </html>
