Add and config polyline tool

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link href='sketch/min/sketch-api.min.css?2020.0.2' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <!-- <link rel='stylesheet' type="text/css" href='./src/styles/spectrum.css'> -->
   <!-- <link rel='stylesheet' type="text/css" href='./src/styles/styles.css'> -->
   <title>Kaleidoscope</title>
@@ -24,7 +28,7 @@
             <div class='vector-tool-sub-category'>
               <svg id="path" data-name="path" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M96.08,47.53A42.86,42.86,0,0,0,60.47,11.92V6.69H47.52v5.23A42.87,42.87,0,0,0,11.91,47.53H6.68V60.48h5.23A42.28,42.28,0,0,0,47.52,96.09v5.25H60.47V96.09A42.88,42.88,0,0,0,96.08,60.48h5.24V47.53Zm-45-37.25h5.77v5.78H51.11ZM10.27,56.89V51.11h5.78v5.78ZM56.88,97.75H51.11V92h5.77Zm3.59-5.21V88.39H47.52v4.16A38.79,38.79,0,0,1,15.45,60.48h4.19V47.53H15.46A39.33,39.33,0,0,1,47.52,15.47v4.17H60.47V15.47A39.3,39.3,0,0,1,92.53,47.53H88.37V60.48h4.16A39.33,39.33,0,0,1,60.47,92.54ZM97.73,56.89H92V51.11h5.78Z"/></svg>
 
-              <svg id="line" data-name="line" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M23,87.19,87.28,22.91h8.8v-11H85V20.6L20.64,85H12V96H23ZM88.09,19.85V14.93H93v4.92ZM15,93V88h4.92V93Z"/></svg>
+              <svg id="polyline" data-name="polyline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M23,87.19,87.28,22.91h8.8v-11H85V20.6L20.64,85H12V96H23ZM88.09,19.85V14.93H93v4.92ZM15,93V88h4.92V93Z"/></svg>
             </div>
           </div>
 
