--- a/src/index.html
+++ b/src/index.html
@@ -19,43 +19,84 @@
     <div id='sketch-toolbar'> 
       <div id='toolbar-top'>
         <div id='select-tool-category'> 
-          <svg id="select-tool-button" class='tool-tip-right' data-name="select-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path d="M6.46,8.16V6.48H8.14c.36.17.71.36,1.08.5L98.45,42.5c.75.3,1.59.54,1.53,1.58s-.91,1.16-1.71,1.34q-11.1,2.47-22.2,5l-6.4,1.47,1.13,1.18,29.77,29.78a8.39,8.39,0,0,1,.83.86,1.25,1.25,0,0,1-.07,1.83l-.84.85L85.18,101.76H84a.63.63,0,0,0-.1-.2l-31.07-31c-.26-.26-.54-.5-.9-.82-.14.45-.23.72-.3,1q-2.19,9.81-4.39,19.63c-.63,2.81-1.22,5.62-1.94,8.41a1.93,1.93,0,0,1-1.21,1.19c-.38.07-.91-.55-1.33-.92-.16-.14-.19-.43-.28-.65Q26.26,57.61,10.05,16.89C8.89,14,7.66,11.07,6.46,8.16Z"/></svg>
+          <div id="select-tool-button" class='tool-tip-right'>
+            <svg data-name="select-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path d="M6.46,8.16V6.48H8.14c.36.17.71.36,1.08.5L98.45,42.5c.75.3,1.59.54,1.53,1.58s-.91,1.16-1.71,1.34q-11.1,2.47-22.2,5l-6.4,1.47,1.13,1.18,29.77,29.78a8.39,8.39,0,0,1,.83.86,1.25,1.25,0,0,1-.07,1.83l-.84.85L85.18,101.76H84a.63.63,0,0,0-.1-.2l-31.07-31c-.26-.26-.54-.5-.9-.82-.14.45-.23.72-.3,1q-2.19,9.81-4.39,19.63c-.63,2.81-1.22,5.62-1.94,8.41a1.93,1.93,0,0,1-1.21,1.19c-.38.07-.91-.55-1.33-.92-.16-.14-.19-.43-.28-.65Q26.26,57.61,10.05,16.89C8.89,14,7.66,11.07,6.46,8.16Z"/></svg>
+          </div>
         </div>
 
           <div id='vector-tool-category'>
-            <svg id="vector-tool-button" class='tool-tip-right' data-name="vector-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M96.08,47.53A42.86,42.86,0,0,0,60.47,11.92V6.69H47.52v5.23A42.87,42.87,0,0,0,11.91,47.53H6.68V60.48h5.23A42.28,42.28,0,0,0,47.52,96.09v5.25H60.47V96.09A42.88,42.88,0,0,0,96.08,60.48h5.24V47.53Zm-45-37.25h5.77v5.78H51.11ZM10.27,56.89V51.11h5.78v5.78ZM56.88,97.75H51.11V92h5.77Zm3.59-5.21V88.39H47.52v4.16A38.79,38.79,0,0,1,15.45,60.48h4.19V47.53H15.46A39.33,39.33,0,0,1,47.52,15.47v4.17H60.47V15.47A39.3,39.3,0,0,1,92.53,47.53H88.37V60.48h4.16A39.33,39.33,0,0,1,60.47,92.54ZM97.73,56.89H92V51.11h5.78Z"/></svg>
+            <div id="vector-tool-button">
+              <svg data-name="vector-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M96.08,47.53A42.86,42.86,0,0,0,60.47,11.92V6.69H47.52v5.23A42.87,42.87,0,0,0,11.91,47.53H6.68V60.48h5.23A42.28,42.28,0,0,0,47.52,96.09v5.25H60.47V96.09A42.88,42.88,0,0,0,96.08,60.48h5.24V47.53Zm-45-37.25h5.77v5.78H51.11ZM10.27,56.89V51.11h5.78v5.78ZM56.88,97.75H51.11V92h5.77Zm3.59-5.21V88.39H47.52v4.16A38.79,38.79,0,0,1,15.45,60.48h4.19V47.53H15.46A39.33,39.33,0,0,1,47.52,15.47v4.17H60.47V15.47A39.3,39.3,0,0,1,92.53,47.53H88.37V60.48h4.16A39.33,39.33,0,0,1,60.47,92.54ZM97.73,56.89H92V51.11h5.78Z"/></svg>
+            </div>
 
             <div class='vector-tool-sub-category'>
-              <svg id="path" data-name="path" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M96.08,47.53A42.86,42.86,0,0,0,60.47,11.92V6.69H47.52v5.23A42.87,42.87,0,0,0,11.91,47.53H6.68V60.48h5.23A42.28,42.28,0,0,0,47.52,96.09v5.25H60.47V96.09A42.88,42.88,0,0,0,96.08,60.48h5.24V47.53Zm-45-37.25h5.77v5.78H51.11ZM10.27,56.89V51.11h5.78v5.78ZM56.88,97.75H51.11V92h5.77Zm3.59-5.21V88.39H47.52v4.16A38.79,38.79,0,0,1,15.45,60.48h4.19V47.53H15.46A39.33,39.33,0,0,1,47.52,15.47v4.17H60.47V15.47A39.3,39.3,0,0,1,92.53,47.53H88.37V60.48h4.16A39.33,39.33,0,0,1,60.47,92.54ZM97.73,56.89H92V51.11h5.78Z"/></svg>
+              <div id="path">
+                <svg data-name="path" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M96.08,47.53A42.86,42.86,0,0,0,60.47,11.92V6.69H47.52v5.23A42.87,42.87,0,0,0,11.91,47.53H6.68V60.48h5.23A42.28,42.28,0,0,0,47.52,96.09v5.25H60.47V96.09A42.88,42.88,0,0,0,96.08,60.48h5.24V47.53Zm-45-37.25h5.77v5.78H51.11ZM10.27,56.89V51.11h5.78v5.78ZM56.88,97.75H51.11V92h5.77Zm3.59-5.21V88.39H47.52v4.16A38.79,38.79,0,0,1,15.45,60.48h4.19V47.53H15.46A39.33,39.33,0,0,1,47.52,15.47v4.17H60.47V15.47A39.3,39.3,0,0,1,92.53,47.53H88.37V60.48h4.16A39.33,39.33,0,0,1,60.47,92.54ZM97.73,56.89H92V51.11h5.78Z"/></svg>
+              </div>
 
-              <svg id="polyline" data-name="polyline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M23,87.19,87.28,22.91h8.8v-11H85V20.6L20.64,85H12V96H23ZM88.09,19.85V14.93H93v4.92ZM15,93V88h4.92V93Z"/></svg>
+              <div id="polyline">
+                <svg data-name="polyline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M23,87.19,87.28,22.91h8.8v-11H85V20.6L20.64,85H12V96H23ZM88.09,19.85V14.93H93v4.92ZM15,93V88h4.92V93Z"/></svg>
+              </div>
             </div>
           </div>
 
         <div id='brush-tool-category'> 
-          <svg id="brush-tool-button" data-name="brush-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.8,74.73,33.35,93.28,9.45,99.82a.92.92,0,0,1-1.14-1.13Z"/><rect class="cls-1" x="18.02" y="43.46" width="66.74" height="26.45" transform="translate(-25.03 52.94) rotate(-45)"/><polygon class="cls-1" points="98.95 27.84 88.47 38.31 69.76 19.61 80.28 9.08 98.95 27.84"/><path class="cls-1" d="M99,27.84,80.26,9.15a14.05,14.05,0,0,1,17.65,4.1C101,17.27,101.23,23,99,27.84Z"/></svg>
+          <div id="brush-tool-button">
+            <svg data-name="brush-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.8,74.73,33.35,93.28,9.45,99.82a.92.92,0,0,1-1.14-1.13Z"/><rect class="cls-1" x="18.02" y="43.46" width="66.74" height="26.45" transform="translate(-25.03 52.94) rotate(-45)"/><polygon class="cls-1" points="98.95 27.84 88.47 38.31 69.76 19.61 80.28 9.08 98.95 27.84"/><path class="cls-1" d="M99,27.84,80.26,9.15a14.05,14.05,0,0,1,17.65,4.1C101,17.27,101.23,23,99,27.84Z"/></svg>
+          </div>
 
           <div class='brush-tool-sub-category'>
-            <svg id="crayon" data-name="crayon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.8,74.73,33.35,93.28,9.45,99.82a.92.92,0,0,1-1.14-1.13Z"/><rect class="cls-1" x="18.02" y="43.46" width="66.74" height="26.45" transform="translate(-25.03 52.94) rotate(-45)"/><polygon class="cls-1" points="98.95 27.84 88.47 38.31 69.76 19.61 80.28 9.08 98.95 27.84"/><path class="cls-1" d="M99,27.84,80.26,9.15a14.05,14.05,0,0,1,17.65,4.1C101,17.27,101.23,23,99,27.84Z"/></svg>
+            <div id="crayon">            
+              <svg data-name="crayon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.8,74.73,33.35,93.28,9.45,99.82a.92.92,0,0,1-1.14-1.13Z"/><rect class="cls-1" x="18.02" y="43.46" width="66.74" height="26.45" transform="translate(-25.03 52.94) rotate(-45)"/><polygon class="cls-1" points="98.95 27.84 88.47 38.31 69.76 19.61 80.28 9.08 98.95 27.84"/><path class="cls-1" d="M99,27.84,80.26,9.15a14.05,14.05,0,0,1,17.65,4.1C101,17.27,101.23,23,99,27.84Z"/></svg>
+            </div>
 
-            <svg id="pencil" data-name="pencil" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.42,75.1,33,93.65,9.06,100.19a.92.92,0,0,1-1.13-1.13Z"/><rect class="cls-1" x="17.64" y="43.83" width="66.74" height="26.45" transform="translate(-25.4 52.78) rotate(-45)"/><polygon class="cls-1" points="94.44 32.34 88.09 38.68 69.38 19.98 75.72 13.63 94.44 32.34"/><path class="cls-1" d="M97.91,27.56,80.31,10a13.23,13.23,0,0,1,16.62,3.87C99.83,17.61,100.06,23,97.91,27.56Z"/></svg>
+            <div id="pencil">
+              <svg data-name="pencil" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M14.42,75.1,33,93.65,9.06,100.19a.92.92,0,0,1-1.13-1.13Z"/><rect class="cls-1" x="17.64" y="43.83" width="66.74" height="26.45" transform="translate(-25.4 52.78) rotate(-45)"/><polygon class="cls-1" points="94.44 32.34 88.09 38.68 69.38 19.98 75.72 13.63 94.44 32.34"/><path class="cls-1" d="M97.91,27.56,80.31,10a13.23,13.23,0,0,1,16.62,3.87C99.83,17.61,100.06,23,97.91,27.56Z"/></svg>
+            </div>
 
-            <svg id="pen" data-name="pen" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M65.57,23.47l19,19L46.4,80.72C27.25,99.87,8.81,99.27,8.81,99.27S8.38,80.66,27.36,61.68Z"/><path class="cls-1" d="M101.81,19.73a13.42,13.42,0,0,1-3.94,9.52L87.4,39.74l-19-19L78.83,10.21a13.46,13.46,0,0,1,23,9.52Z"/><polygon class="cls-1" points="7.7 101.73 6.19 100.22 16.98 87.96 20.12 91.1 7.7 101.73"/></svg>
+            <div id="pen">
+              <svg data-name="pen" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M65.57,23.47l19,19L46.4,80.72C27.25,99.87,8.81,99.27,8.81,99.27S8.38,80.66,27.36,61.68Z"/><path class="cls-1" d="M101.81,19.73a13.42,13.42,0,0,1-3.94,9.52L87.4,39.74l-19-19L78.83,10.21a13.46,13.46,0,0,1,23,9.52Z"/><polygon class="cls-1" points="7.7 101.73 6.19 100.22 16.98 87.96 20.12 91.1 7.7 101.73"/></svg>
+            </div>
           </div>
         </div>
 
         <div id='shape-tool-category'> 
-          <svg id="shape-tool-button" data-name="circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><circle class="cls-1" cx="54" cy="54" r="47"/></svg>
+          <div id="shape-tool-button">
+            <svg data-name="circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><circle class="cls-1" cx="54" cy="54" r="47"/></svg>
+          </div>
           
           <div class='shape-tool-sub-category'>
-            <svg id="circle" data-name="circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><circle class="cls-1" cx="54" cy="54" r="47"/></svg>
-            <svg id="square" data-name="square" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><rect class="cls-1" x="12.92" y="12.92" width="82.15" height="82.15" rx="5.31"/></svg>
-            <svg id="triangle" data-name="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M50.4,10.93,4.79,93.48A3.73,3.73,0,0,0,8.06,99H99.28a3.74,3.74,0,0,0,3.27-5.54L56.94,10.93A3.74,3.74,0,0,0,50.4,10.93Z"/></svg>
-            <svg id="ring" data-name="ring" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M54,7a47,47,0,1,0,47,47A47,47,0,0,0,54,7Zm0,69.63A22.63,22.63,0,1,1,76.63,54,22.63,22.63,0,0,1,54,76.63Z"/></svg>
-            <svg id="polygon" data-name="polygon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M78.33,8.93H29.67a3,3,0,0,0-2.54,1.46L2.8,52.54a2.93,2.93,0,0,0,0,2.92L27.13,97.61a3,3,0,0,0,2.54,1.46H78.33a3,3,0,0,0,2.54-1.46L105.2,55.46a2.93,2.93,0,0,0,0-2.92L80.87,10.39A3,3,0,0,0,78.33,8.93Z"/></svg>
-            <svg id="star" data-name="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M55.62,7.75l14.9,27.36a1.85,1.85,0,0,0,1.28.94l30.63,5.71a1.85,1.85,0,0,1,1,3.08L82,67.46A1.87,1.87,0,0,0,81.52,69l4,30.9a1.84,1.84,0,0,1-2.62,1.9L54.79,88.39a1.82,1.82,0,0,0-1.58,0L25.07,101.77a1.84,1.84,0,0,1-2.62-1.9l4-30.9A1.87,1.87,0,0,0,26,67.46L4.57,44.84a1.85,1.85,0,0,1,1-3.08L36.2,36.05a1.85,1.85,0,0,0,1.28-.94L52.38,7.75A1.85,1.85,0,0,1,55.62,7.75Z"/></svg>
-            <svg id="pie" data-name="pie" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M101,54A47,47,0,1,1,54,7V54Z"/></svg>
-            <svg id="burst" data-name="burst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M103,69.46c-1.62,5-8.32,7.62-16.77,7.28,2.94,7.93,2.52,15.11-1.74,18.2s-11.22,1.28-17.85-4c-2.28,8.15-6.85,13.71-12.12,13.71S44.7,99.12,42.43,91c-6.63,5.25-13.6,7.07-17.86,4s-4.68-10.27-1.74-18.2c-8.45.35-15.15-2.28-16.77-7.28S8.31,58.39,15.35,53.7C8.31,49,4.43,43,6.06,38s8.32-7.64,16.77-7.28c-2.94-7.92-2.51-15.11,1.74-18.21s11.23-1.28,17.86,4C44.7,8.3,49.28,2.73,54.53,2.73S64.37,8.3,66.65,16.44c6.63-5.26,13.59-7.07,17.85-4s4.68,10.29,1.74,18.21C94.69,30.32,101.39,33,103,38S100.76,49,93.72,53.7C100.76,58.39,104.64,64.45,103,69.46Z"/></svg>
+            <div id="circle">
+              <svg data-name="circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><circle class="cls-1" cx="54" cy="54" r="47"/></svg>
+            </div>
+
+            <div id="square">
+              <svg data-name="square" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><rect class="cls-1" x="12.92" y="12.92" width="82.15" height="82.15" rx="5.31"/></svg>
+            </div>
+
+            <div id="triangle">
+              <svg data-name="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M50.4,10.93,4.79,93.48A3.73,3.73,0,0,0,8.06,99H99.28a3.74,3.74,0,0,0,3.27-5.54L56.94,10.93A3.74,3.74,0,0,0,50.4,10.93Z"/></svg>
+            </div>
+
+            <div id="ring">
+              <svg data-name="ring" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M54,7a47,47,0,1,0,47,47A47,47,0,0,0,54,7Zm0,69.63A22.63,22.63,0,1,1,76.63,54,22.63,22.63,0,0,1,54,76.63Z"/></svg>
+            </div>
+
+            <div id="polygon">
+              <svg data-name="polygon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M78.33,8.93H29.67a3,3,0,0,0-2.54,1.46L2.8,52.54a2.93,2.93,0,0,0,0,2.92L27.13,97.61a3,3,0,0,0,2.54,1.46H78.33a3,3,0,0,0,2.54-1.46L105.2,55.46a2.93,2.93,0,0,0,0-2.92L80.87,10.39A3,3,0,0,0,78.33,8.93Z"/></svg>
+            </div>
+
+            <div id="star">
+              <svg data-name="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M55.62,7.75l14.9,27.36a1.85,1.85,0,0,0,1.28.94l30.63,5.71a1.85,1.85,0,0,1,1,3.08L82,67.46A1.87,1.87,0,0,0,81.52,69l4,30.9a1.84,1.84,0,0,1-2.62,1.9L54.79,88.39a1.82,1.82,0,0,0-1.58,0L25.07,101.77a1.84,1.84,0,0,1-2.62-1.9l4-30.9A1.87,1.87,0,0,0,26,67.46L4.57,44.84a1.85,1.85,0,0,1,1-3.08L36.2,36.05a1.85,1.85,0,0,0,1.28-.94L52.38,7.75A1.85,1.85,0,0,1,55.62,7.75Z"/></svg>
+            </div>
+
+            <div id="pie">
+              <svg data-name="pie" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M101,54A47,47,0,1,1,54,7V54Z"/></svg>
+            </div>
+
+            <div id="burst">
+              <svg data-name="burst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs></defs><path class="cls-1" d="M103,69.46c-1.62,5-8.32,7.62-16.77,7.28,2.94,7.93,2.52,15.11-1.74,18.2s-11.22,1.28-17.85-4c-2.28,8.15-6.85,13.71-12.12,13.71S44.7,99.12,42.43,91c-6.63,5.25-13.6,7.07-17.86,4s-4.68-10.27-1.74-18.2c-8.45.35-15.15-2.28-16.77-7.28S8.31,58.39,15.35,53.7C8.31,49,4.43,43,6.06,38s8.32-7.64,16.77-7.28c-2.94-7.92-2.51-15.11,1.74-18.21s11.23-1.28,17.86,4C44.7,8.3,49.28,2.73,54.53,2.73S64.37,8.3,66.65,16.44c6.63-5.26,13.59-7.07,17.85-4s4.68,10.29,1.74,18.21C94.69,30.32,101.39,33,103,38S100.76,49,93.72,53.7C100.76,58.39,104.64,64.45,103,69.46Z"/></svg>
+            </div>
           </div>
         </div>
       </div>
