Add functionality to hide/show sketch canvas

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <!-- <link rel='stylesheet' type="text/css" href='./src/styles/spectrum.css'> -->
-  <!-- <link rel='stylesheet' type="text/css" href='./src/styles/styles.css'> -->
   <title>Kaleidoscope</title>
 </head>
 
@@ -112,13 +110,17 @@
     </div>
 
     <!-- sketch canvas  -->
+
     <div id='sketch-canvas-container'>
       <sketch-container id='sketch-canvas'></sketch-container>
+      <svg id="hide-btn" data-name="hide-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M46.72,89.16S12,54,12,54L46.72,18.84"/><line class="cls-1" x1="12.04" y1="54.01" x2="95.96" y2="54.01"/></svg>
     </div>
 
     <!-- kaleidoscope -->
     <div id='kaleidoscope-canvas-container'>
       <canvas id='canvas'></canvas>
+
+      <svg id="show-btn" data-name="show-btn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 108"><defs><style></style></defs><path class="cls-1" d="M46.72,89.16S12,54,12,54L46.72,18.84"/><line class="cls-1" x1="12.04" y1="54.01" x2="95.96" y2="54.01"/></svg>
     </div>
 
     <!-- kaleidoscope toolbar -->
