Re-add loading.js and associated links

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <div id='app-container'>
     <!-- sketch canvas toolbar -->
-    <div id='sketch-toolbar'> 
+    <div id='sketch-toolbar' style='visibility:hidden'> 
       <div id='toolbar-top'>
         <div id='select-tool-category'> 
           <div id="select-tool-button" class='tool-tip-right'>
