--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,49 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link href='sketch/min/sketch-api.min.css?2020.0.2' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
   <title>Kaleidoscope</title>
   <script src='loading.js'></script>
 </head>
 
 <body>
-
   <div id='app-container'>
+    <!-- loading screen -->
+    <style>
+      #logo {
+        animation: rotate 3.5s infinite ;
+      }
+
+      @keyframes rotate {
+      0% {
+        transform: rotateX(0deg);
+        transform: rotateZ(0deg);
+      }
+      25% {
+        transform: rotateX(180deg);
+        /* transform: rotateZ(0deg); */
+      }
+      50% {
+        /* transform: rotateX(180deg); */
+        transform: rotateZ(180deg);
+      }
+      75% {
+        transform: rotateX(360deg);
+        /* transform: rotateZ(180deg); */
+      }
+      100% {
+        /* transform: rotateX(360deg); */
+        transform: rotateZ(360deg);
+      }
+    }
+    </style>
+
+    <div id='load-screen' style='background-color: #E4C1FD;'>
+      <img src='./logo.png' id='logo' style='width: 5vw; height: auto; margin: 50%;'>
+    </div>
+
     <!-- sketch canvas toolbar -->
     <div id='sketch-toolbar' style='visibility:hidden'> 
       <div id='toolbar-top'>
