Add initial styling for range inputs (chrome only)

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
 <body>
   <div id='app-container'>
     <!-- loading screen -->
+    <div id='load-screen' style='background-color: #E4C1FD; width: 100vw; height: 100vh;'>
+      <img src='./logo.png' id='logo' style='width: 5vw; height: auto; margin: 50%;'>
+    </div>
+
     <style>
       #logo {
         animation: rotate 3.5s infinite ;
@@ -43,10 +47,6 @@
       }
     }
     </style>
-
-    <div id='load-screen' style='background-color: #E4C1FD;'>
-      <img src='./logo.png' id='logo' style='width: 5vw; height: auto; margin: 50%;'>
-    </div>
 
     <!-- sketch canvas toolbar -->
     <div id='sketch-toolbar' style='visibility:hidden'> 
